--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ header{
 nav {
   width: 960px;
   margin: auto;
-  display: flex;
 }
 
 header img {
@@ -22,6 +21,7 @@ header ul {
 
 header ul li {
   margin-top: 40px;
+
 }
 
 a {
@@ -36,7 +36,7 @@ main {
 
 main ul {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between ;
   margin-top: 30px;
   margin-bottom: 30px;
 }
@@ -46,15 +46,31 @@ section{
 }
 
 p {
-  height: 400px;
+  max-height: 350px;
   overflow: auto;
+  margin-bottom: 15px;
+  margin-left: 15px;
 }
 
 button {
   transition: 500ms;
+  margin-left: 15px;
+  shape-rendering: round;
+}
+
+h2{
+  font-weight: 600;
+  margin-left: 15px;
+  margin-bottom: 4px;
 }
 
 button:hover {
 background-color: aqua;
 }
 
+footer{
+  background-color: #444;
+  height: 100px;
+  margin-top:30px;
+  height: 200px;
+}
